--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "build": "webpack --config webpack/webpack.config.prod.js  --colors",
-    "start": "webpack-dev-server --open --config webpack/webpack.config.dev.js"
+    "start": "webpack-dev-server --open --config webpack/webpack.config.dev.js",
+    "deploy": "git subtree push --prefix build origin gh-pages"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
     "javascript"
   ],
   "author": "marcincyboran",
+  "homepage":"https://marcincyboran.github.io/portfolio",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/marcincyboran/portfolio.git"
@@ -33,6 +35,7 @@
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
     "file-loader": "^4.0.0",
+    "gh-pages": "^2.1.0",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
